hello world app

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,6 @@
 {
     "nrf-connect.applications": [
-        "${workspaceFolder}\\l1_e2"
+        "${workspaceFolder}\\l1_e2",
+        "${workspaceFolder}\\l3_e1"
     ]
 }
