--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,6 +1,7 @@
 {
     "nrf-connect.applications": [
         "${workspaceFolder}\\l1_e2",
-        "${workspaceFolder}\\l3_e1"
+        "${workspaceFolder}\\l3_e1",
+        "${workspaceFolder}\\l3_e2"
     ]
 }
