--- a/ble_fundementals/.vscode/settings.json
+++ b/ble_fundementals/.vscode/settings.json
@@ -9,7 +9,10 @@
         "${workspaceFolder}\\l4_e2",
         "${workspaceFolder}\\l4_e3",
         "${workspaceFolder}\\l5_e1",
-        "${workspaceFolder}\\l5_e2"
+        "${workspaceFolder}\\l5_e2",
+        "${workspaceFolder}\\l6_e1",
+        "${workspaceFolder}\\l6_e2",
+        "${workspaceFolder}\\l6_e3"
     ],
     "files.associations": {
         "kernel.h": "c"
